# dad-stock-bot

./: .env.example  .gitignore  README.md  README_ISSUE_PLAN.md  gui.py  pyproject.toml  아빠_주식_확인판.bat
docs/: issue-3-development-plan.md
src/dad_stock_bot/: __init__.py  alerts.py  cli.py  config.py  gui.py  kis.py  models.py  providers.py  realtime.py  storage.py  strategy.py  summary.py
tests/: test_cli.py  test_config.py  test_gui.py  test_kis.py  test_providers.py  test_realtime.py  test_storage.py  test_strategy.py  test_summary.py
